[project]
name = "cdn-service"
version = "0.1.0"
description = ""
authors = [{ name = "andre", email = "andrepedro2004@hotmail.com" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pydantic-extra-types (>=2.10.2,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.52b0,<0.53)",
    "opentelemetry-sdk (>=1.31.0,<2.0.0)",
    "opentelemetry-exporter-otlp (>=1.31.0,<2.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "multipart (>=1.2.1,<2.0.0)",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-asyncio>=0.25.3,<0.26",
    "black>=25.1.0,<26",
    "isort>=6.0.1,<7",
    "watchfiles>=1.0.4,<2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
